src/test/ui/cast/issue-84213.stderr
error[E0605]: non-primitive cast: `Something` as `*const Something`
  --> $DIR/issue-84213.rs:10:33
   |
LL |     let _pointer_to_something = something as *const Something;
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid cast
   |
help: borrow the value for the cast to be valid
   |
LL |     let _pointer_to_something = &something as *const Something;
   |                                 ^

error[E0605]: non-primitive cast: `Something` as `*mut Something`
  --> $DIR/issue-84213.rs:13:37
   |
LL |     let _mut_pointer_to_something = something as *mut Something;
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid cast
   |
help: borrow the value for the cast to be valid
   |
LL |     let _mut_pointer_to_something = &mut something as *mut Something;
   |                                     ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0605`.
